Fix announcement overflowing on mobile views

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,8 +12,10 @@ html {
   max-width: 90%;
   width: fit-content;
   max-height: 400px;
+  overflow-y: scroll;
   justify-self: center;
   background-color: variables.$cardbgColor;
+  @include variables.custom-scrollbar;
   cursor: pointer;
   &:hover {
     border-color: azure;
